# junior-jobs-api

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  somthtest.py
.github/workflows/: tests.yaml
api/: base_models.py  classes.py  database.py  db_logic.py  exceptions.py  logic.py  main.py  models.py  orm_models.py  services.py  settings.py
api/lib/: base_models.py  db_logic.py  exceptions.py  orm_models.py  services.py
api/routes/: main_page.py  stats.py
api/scripts/: app.py
api/stat/: models.py  schemes.py  services.py
templates/: base.html
tests/: conftest.py  test_logic.py  test_routes.py
