[tool.poetry]
name = "junior-jobs-api"
version = "0.1.0"
description = "API for junior-jobs-bot"
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "api"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.44"
python-dotenv = "^0.21.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
